--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
 Brivan Karani<bkryan.bk@gmail.com>
+Cleve Lihasi<clevelihasi@gmail.com>
